<resources>
    <string name="app_name">WidgetsQuestion</string>
    <string name="textview1">이름</string>
    <string name="edittext1">이름을 입력하세요.</string>
    <string name="textview2">나이</string>
    <string name="edittext2">나이를 입력하세요.</string>
    <string name="textviewGender">성별</string>
    <string name="radiobuttonwomen">여자</string>
    <string name="radiobuttonman">남자</string>
    <string name="textviewjob">직업</string>
    <string name="radiobuttonstudent">학생</string>
    <string name="radiobuttonworker">직장인</string>
    <string name="buttonResultHalf"><![CDATA[이름&나이 보기]]></string>
    <string name="buttonresult">결과보기</string>
</resources>
